crates/lowerer/tests/snapshots/upstream_parser_policy__policy_annotations_bad_val_3-2.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: expected a string literal
  ╭▸ test:1:17
  │
1 │ @bad_annotation(bad_annotation)
  │                 ━━━━━━━━━━━━━━ not a valid annotation value
  ╰╴
note: use `@name("value")` with a double-quoted string
