crates/lowerer/tests/snapshots/upstream_parser_policy__policy_annotations_bad_val_3.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: root
---
policies 0..70
╰─ policy 0..70
   ├─ annotation 0..32
   │  ├─ @ 0..1
   │  ├─ identifier 1..15
   │  ├─ ( 15..16
   │  ├─ error 16..30
   │  │  ╰─ identifier 16..30
   │  ├─ ) 30..31
   │  ╰─ whitespace 31..32
   ├─ permit 32..38
   ├─ whitespace 38..39
   ├─ scope 39..68
   │  ├─ ( 39..40
   │  ├─ variable definition 40..49
   │  │  ╰─ principal 40..49
   │  ├─ , 49..50
   │  ├─ whitespace 50..51
   │  ├─ variable definition 51..57
   │  │  ╰─ action 51..57
   │  ├─ , 57..58
   │  ├─ whitespace 58..59
   │  ├─ variable definition 59..67
   │  │  ╰─ resource 59..67
   │  ╰─ ) 67..68
   ├─ ; 68..69
   ╰─ whitespace 69..70
