crates/lowerer/tests/snapshots/upstream_parser_policy__policy_annotations_bad_val_3_diagnostics.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: expected `string`
  ╭▸ policy_annotations_bad_val_3:1:17
  │
1 │ @bad_annotation(bad_annotation)
  ╰╴                ━━━━━━━━━━━━━━ expected `string`
error: expected `)`
  ╭▸ policy_annotations_bad_val_3:1:17
  │
1 │ @bad_annotation(bad_annotation)
  ╰╴                ━━━━━━━━━━━━━━ expected `)`
error: expected `permit`
  ╭▸ policy_annotations_bad_val_3:1:17
  │
1 │ @bad_annotation(bad_annotation)
  ╰╴                ━━━━━━━━━━━━━━ expected `permit`
error: expected `;`
  ╭▸ policy_annotations_bad_val_3:1:17
  │
1 │ @bad_annotation(bad_annotation)
  ╰╴                ━━━━━━━━━━━━━━ expected `;`
error: unexpected token
  ╭▸ policy_annotations_bad_val_3:1:17
  │
1 │   @bad_annotation(bad_annotation)
  │ ┏━━━━━━━━━━━━━━━━━┛
2 │ ┃ permit (principal, action, resource);
  ╰╴┗━┛ unexpected token
