crates/lowerer/tests/snapshots/upstream_parser_policy__single_quote_string_1-2.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: strings must use double quotes, not single quotes
  ╭▸ test:3:21
  │
3 │     principal.foo = 'bar'
  │                     ━━━━━ single-quoted string
  ╰╴
help: replace single quotes `'` with double quotes `"`
