crates/lowerer/tests/snapshots/upstream_parser_policy__single_quote_string_1.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: expected `}`
  ╭▸ test:3:5
  │
3 │     principal.foo = 'bar'
  ╰╴    ━━━━━━━━━ expected `}`
error: invalid operator `=`
  ╭▸ test:3:19
  │
3 │     principal.foo = 'bar'
  │                   ━ not a valid operator
  ╰╴
help: use `==` for equality
  ╭╴
3 │     principal.foo == 'bar'
  ╰╴                   +
error: missing policy effect
  ╭▸ test:3:22
  │
3 │       principal.foo = 'bar'
  │ ┏━━━━━━━━━━━━━━━━━━━━━━┛
4 │ ┃ };
  ╰╴┗━━━┛ expected `permit` or `forbid`
