crates/lowerer/tests/snapshots/upstream_parser_policy__single_quote_string_1_diagnostics.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: unexpected token
  ╭▸ single_quote_string_1:3:21
  │
3 │     principal.foo = 'bar'
  ╰╴                    ━ unexpected token
error: expected `}`
  ╭▸ single_quote_string_1:3:22
  │
3 │     principal.foo = 'bar'
  ╰╴                     ━━━ expected `}`
error: expected `;`
  ╭▸ single_quote_string_1:3:22
  │
3 │     principal.foo = 'bar'
  ╰╴                     ━━━ expected `;`
error: unexpected token
  ╭▸ single_quote_string_1:3:22
  │
3 │       principal.foo = 'bar'
  │ ┏━━━━━━━━━━━━━━━━━━━━━━┛
4 │ ┃ };
  ╰╴┗━━━┛ unexpected token
error: expected `;`
  ╭▸ single_quote_string_1:4:4
  │
4 │ };
  ╰╴  ━ expected `;`
error: expected `}`
  ╭▸ single_quote_string_1:3:5
  │
3 │     principal.foo = 'bar'
  ╰╴    ━━━━━━━━━ expected `}`
error: invalid operator `=`
  ╭▸ single_quote_string_1:3:19
  │
3 │     principal.foo = 'bar'
  │                   ━ not a valid operator
  ╰╴
help: use `==` for equality
  ╭╴
3 │     principal.foo == 'bar'
  ╰╴                   +
error: missing policy effect
  ╭▸ single_quote_string_1:3:22
  │
3 │       principal.foo = 'bar'
  │ ┏━━━━━━━━━━━━━━━━━━━━━━┛
4 │ ┃ };
  ╰╴┗━━━┛ expected `permit` or `forbid`
