crates/lowerer/tests/snapshots/upstream_parser_policy__single_quote_string_2-2.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: strings must use double quotes, not single quotes
  ╭▸ test:1:47
  │
1 │ permit (principal, action, resource == Photo::'mine.jpg');
  │                                               ━━━━━━━━━━ single-quoted string
  ╰╴
help: replace single quotes `'` with double quotes `"`
