crates/lowerer/tests/snapshots/upstream_parser_policy__single_quote_string_2.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: expected `)`
  ╭▸ test:1:9
  │
1 │ permit (principal, action, resource == Photo::'mine.jpg');
  ╰╴        ━━━━━━━━━ expected `)`
error: missing expression
  ╭▸ test:1:40
  │
1 │ permit (principal, action, resource == Photo::'mine.jpg');
  ╰╴                                       ━━━━━━━ expected an entity reference or slot
error: missing policy effect
  ╭▸ test:1:47
  │
1 │ permit (principal, action, resource == Photo::'mine.jpg');
  ╰╴                                              ━━━━━━━━━━━━ expected `permit` or `forbid`
