crates/lowerer/tests/snapshots/upstream_parser_policy__single_quote_string_2_diagnostics.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: expected `)`
  ╭▸ single_quote_string_2:1:47
  │
1 │ permit (principal, action, resource == Photo::'mine.jpg');
  ╰╴                                              ━ expected `)`
error: expected `;`
  ╭▸ single_quote_string_2:1:47
  │
1 │ permit (principal, action, resource == Photo::'mine.jpg');
  ╰╴                                              ━ expected `;`
error: unexpected token
  ╭▸ single_quote_string_2:1:47
  │
1 │ permit (principal, action, resource == Photo::'mine.jpg');
  ╰╴                                              ━━━━━━━━━━━━ unexpected token
error: expected `;`
  ╭▸ single_quote_string_2:1:60
  │
1 │ permit (principal, action, resource == Photo::'mine.jpg');
  ╰╴                                                          ━ expected `;`
error: expected `)`
  ╭▸ single_quote_string_2:1:9
  │
1 │ permit (principal, action, resource == Photo::'mine.jpg');
  ╰╴        ━━━━━━━━━ expected `)`
error: missing expression
  ╭▸ single_quote_string_2:1:40
  │
1 │ permit (principal, action, resource == Photo::'mine.jpg');
  ╰╴                                       ━━━━━━━ expected an entity reference or slot
error: missing policy effect
  ╭▸ single_quote_string_2:1:47
  │
1 │ permit (principal, action, resource == Photo::'mine.jpg');
  ╰╴                                              ━━━━━━━━━━━━ expected `permit` or `forbid`
